# tg-dating-app

./: .gitignore
backend/: pyproject.toml
backend/core/: settings.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_age_user_bio_user_gender_user_looking_for_and_more.py  0003_user_is_video.py  0004_like.py  0005_dislike.py  0006_user_tg_username.py
bot/: api_client.py  keyboards.py  main.py  profile_utils.py  pyproject.toml  states.py
bot/handlers/: profile.py  registration.py  swipe.py
